--- a/app/views/users/_card.html.haml
+++ b/app/views/users/_card.html.haml
@@ -1,8 +1,3 @@
-:javascript
-  function showStats(user_id){
-    $('#stats-' + user_id).toggle();
-  }
-
 .span8
   %div.well
     %table
@@ -19,7 +14,8 @@
               %h2
                 = user.credits
                 credits
-    %a{:onclick => "showStats(#{user.id});"} Show / Hide
+        %td{id: "statsShow-" + user.id.to_s}
+          = link_to '', '#', class: "i icon-chevron-down btn", :onclick => "showStats(#{user.id});"
     %div{id: 'stats-' + user.id.to_s, hidden: true}
       %h3= link_to 'Chores', user_tasks_path(user)
       %table.table{align: "center"}
@@ -59,5 +55,5 @@
           %td{:colspan => "2"}
             .progress.progress
               .bar{:style => "width: #{this_month_complete.to_f/this_month_total.to_f*100}%;"}
-      = link_to ' Edit', edit_user_path(user), class: "i icon-edit btn btn-info"
-      = link_to ' Remove', user, confirm: 'Are you sure?', method: :delete, class: "i icon-remove btn btn-danger"
+      = link_to ' Edit', edit_user_path(user), class: "i icon-edit btn btn-info btn-small"
+      = link_to ' Delete', user, confirm: 'Are you sure?', method: :delete, class: "i icon-remove btn btn-danger btn-small"
