--- a/app/views/tasks/show.html.haml
+++ b/app/views/tasks/show.html.haml
@@ -30,17 +30,17 @@
     = 'Credits:'
     %b
       = @task.points.to_s if @task.points
-  %h4 Last completed...
+  .lead Last completed...
   -if @completions != []
     %table.table
       - @completions.each do |completion|
         %tr{ id: "completion-#{completion.id}" }
           %td= completion.completed
-          %td= link_to ' Clear', completion, method: :delete, class: "i icon-remove btn", remote: true
+          %td= link_to ' Clear', completion, method: :delete, class: "i icon-remove btn btn-small", remote: true
   -else
-    .muted Task has not been done
+    .muted Chore has not been done
     %br
   %p
-    = link_to 'Back', :back, class: "btn"
-    = link_to ' Edit', edit_task_path(@task), class: "i icon-edit btn btn-info"
-    = link_to ' Destroy', @task, confirm: 'Are you sure?', method: :delete, class: "i icon-remove btn btn-danger"
+    = link_to 'Back', :back, class: "btn btn-small"
+    = link_to ' Edit', edit_task_path(@task), class: "i icon-edit btn btn-info btn-small"
+    = link_to ' Destroy', @task, confirm: 'Are you sure?', method: :delete, class: "i icon-remove btn btn-danger btn-small"
