--- a/app/views/tasks/_form.html.haml
+++ b/app/views/tasks/_form.html.haml
@@ -62,4 +62,4 @@
         = f.radio_button :period, 3
         %div.label.label-warning Evening
       .actions{align: "right"}
-        = f.submit "Save", class: "btn btn-success"
+        = f.submit "Save", class: "btn btn-success btn-small"
