--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -35,5 +35,5 @@
           = image_tag('User2.png', :class => 'img-rounded', :size => "50x50")
           = f.radio_button :thumbnail, "User3.png"
           = image_tag('User3.png', :class => 'img-rounded', :size => "50x50")
-    .actions
-      = f.submit "Save", class: "btn btn-small"
+    .actions{align: "right"}
+      = f.submit "Save", class: "btn btn-small btn-success"
