--- a/app/views/tasks/index.html.haml
+++ b/app/views/tasks/index.html.haml
@@ -4,7 +4,7 @@
       %em= link_to "#{@user.name}'s", users_path
       Chores
   .span2
-    = link_to " Add chore", new_task_path, class: "i icon-plus btn btn-success"
+    = link_to " Chore", new_task_path, class: "i icon-plus btn btn-success btn-small"
   .span7
     -if @todays != []
       %h4 Today
