--- a/app/views/tasks/new.html.haml
+++ b/app/views/tasks/new.html.haml
@@ -4,4 +4,4 @@
       New Chore
     =render 'form'
   %p
-    = link_to 'Back', :back, class: "btn"
+    = link_to 'Back', :back, class: "btn btn-small"
