store and purchases are working

--- a/app/views/items/edit.html.haml
+++ b/app/views/items/edit.html.haml
@@ -1,7 +1,8 @@
 .span8
   .well
     %h2
-      New Family Member
+      Editing
+      %em=@item.name
     =render 'form'
   %p
     = link_to 'Back', :back, class: "btn btn-small"
