--- a/app/views/items/_item.html.haml
+++ b/app/views/items/_item.html.haml
@@ -12,8 +12,10 @@
         .lead
           = item.price
           credits
-      .span1{id: "purchase-#{item.id}"}
-        = link_to 'Buy', '#', class: "btn", onclick: "purchaseItem(#{current_user.id}, #{item.id});", remote: true
+      .span1
+        = link_to 'Buy', buy_item_path(item: item.id, user: current_user.id), class: "btn", remote: true
+        %div{id: "item-#{item.id}"}
+          .badge.badge-inverse= Purchase.where(item_id: item.id).count
     .row
       .span7
         .muted= item.description
