--- a/app/views/items/new.html.haml
+++ b/app/views/items/new.html.haml
@@ -1,7 +1,7 @@
 .span8
   .well
     %h2
-      New Family Member
+      New Item
     =render 'form'
   %p
     = link_to 'Back', :back, class: "btn btn-small"
