--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -1,9 +1,11 @@
-.span8
-  .span5
+.span8{align: "center"}
+  .row
     %h2 Family Members
-  .span2
-    = link_to " Member", new_user_path, class: "i icon-plus btn btn-success btn-small"
-  .span7
-    %p
-      -@users.sort_by{|x| x.facebook_id.to_i }.reverse.each do |user|
-        =render partial: 'card', locals: { user: user }
+  .row
+    .span2
+      = link_to " Member", new_user_path, class: "i icon-plus btn btn-success btn-small"
+  .row
+    .span7
+      %p
+        -@users.sort_by{|x| x.facebook_id.to_i }.reverse.each do |user|
+          =render partial: 'card', locals: { user: user }
