--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -1,6 +1,6 @@
 .span8{align: "center"}
   .row
-    %h2 Family Members
+    %h2.lead Family Members
   .row
     .span2
       = link_to " Member", new_user_path, class: "i icon-plus btn btn-success btn-small"
