--- a/app/views/items/index.html.haml
+++ b/app/views/items/index.html.haml
@@ -1,17 +1,20 @@
 .span8{align: "center"}
   .row
     .span5
-      %h2 Store
+      %h2.lead Store
     .span2.well.well-small{id: "credits"}
       .lead
         = current_user.credits
         credits
   .row
+    %ul.nav.nav-tabs
+      %li.active
+        %a{:href => "#"} Items
+      %li
+        = link_to 'Purchases', purchases_path
+  .row
     .span2
       = link_to " Item", new_item_path, class: "i icon-plus btn btn-success btn-small"
-      %p
-    .span2
-      = link_to "Purchases", purchases_path, class: "btn btn-small"
       %p
   .row
     .span7
