--- a/app/views/tasks/chores.html.haml
+++ b/app/views/tasks/chores.html.haml
@@ -1,6 +1,6 @@
 .span8{align: "center"}
   .row
-    %h2 All Chores
+    %h2.lead All Chores
   .row
     .span2
       = link_to " Chore", new_task_path, class: "i icon-plus btn btn-success btn-small"
