--- a/app/views/items/_item.html.haml
+++ b/app/views/items/_item.html.haml
@@ -1,5 +1,5 @@
 .span8{align: "center"}
-  %div.well.well-small
+  %div.well.well-small{id: "item-#{item.id}"}
     .row
       .span1
         -if item.thumbnail == ""
@@ -17,5 +17,9 @@
         %div{id: "item-#{item.id}"}
           .badge.badge-inverse= Purchase.where(item_id: item.id).count
     .row
-      .span7
+      .span6
         .muted= item.description
+      -if current_user.facebook_id != "" && current_user.facebook_id != nil
+        .span1{align: "right"}
+          = link_to '', edit_item_path(item), class: "i icon-edit btn btn-info btn-mini"
+          = link_to '', item, confirm: 'Are you sure?', method: :delete, class: "i icon-remove btn btn-danger btn-mini", remote: true
