--- a/app/views/users/_header.html.haml
+++ b/app/views/users/_header.html.haml
@@ -11,4 +11,7 @@
       .lead
         = @user.credits
         credits
+  .row
+    .span2
+      = link_to " Chore", new_task_path, class: "i icon-plus btn btn-success btn-small"
   %p
