--- a/app/views/users/_weeks.html.haml
+++ b/app/views/users/_weeks.html.haml
@@ -8,9 +8,9 @@
       %li.active
         = link_to 'Weeks', '#', onclick: "showWeeks();"
       %li
-        = link_to 'Months', '#'
+        = link_to 'Months', '#', onclick: "showMonths();"
       %li
-        = link_to 'All', '#'
+        = link_to 'All', '#', onclick: "showAll();"
   .span7
     %h4 This Weeks Chores
     %table.table
