--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -1,7 +1,7 @@
-.span8
+.span6
   .well
-    %h2
-      Editing
+    %h2.lead{align: "center"}
+      Editing:
       %em=@user.name
     =render 'form'
   %p
