--- a/app/views/users/_stats.html.haml
+++ b/app/views/users/_stats.html.haml
@@ -8,9 +8,9 @@
       %li
         = link_to 'Weeks', '#', onclick: "showWeeks();"
       %li
-        = link_to 'Months', '#'
+        = link_to 'Months', '#', onclick: "showMonths();"
       %li
-        = link_to 'All', '#'
+        = link_to 'All', '#', onclick: "showAll();"
   .span8
     %h4 Completion Stats
     %table.table{align: "center"}
