--- a/app/views/users/award_credits.js.erb
+++ b/app/views/users/award_credits.js.erb
@@ -1,1 +1,1 @@
-$("#credits-<%= @user.id %>").html('<h2 id="credits-<%= @user.id %>"><%= @credits %> credits</h2>');
+$("#credits-<%= @user.id %>").html('<h2 class="lead" id="credits-<%= @user.id %>"><%= @credits %> credits</h2>');
