--- a/app/views/users/_header.html.haml
+++ b/app/views/users/_header.html.haml
@@ -28,13 +28,13 @@
     %li{id: "all-tab"}
       = link_to 'All', '#', onclick: "showAll();"
   %ul.nav.nav-tabs.visible-phone
-    %li.active{id: "stats-tab"}
+    %li.active{id: "s-tab"}
       = link_to 'P', user_path
-    %li{id: "todays-tab"}
+    %li{id: "t-tab"}
       = link_to 'T', '#', onclick: "showTodays();"
-    %li{id: "weeks-tab"}
+    %li{id: "w-tab"}
       = link_to 'W', '#', onclick: "showWeeks();"
-    %li{id: "months-tab"}
+    %li{id: "m-tab"}
       = link_to 'M', '#', onclick: "showMonths();"
-    %li{id: "all-tab"}
+    %li{id: "a-tab"}
       = link_to 'A', '#', onclick: "showAll();"
