--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -11,6 +11,11 @@
     $('#weeks-tab').removeClass('active');
     $('#months-tab').removeClass('active');
     $('#all-tab').removeClass('active');
+    $('#s-tab').removeClass('active');
+    $('#t-tab').addClass('active');
+    $('#w-tab').removeClass('active');
+    $('#m-tab').removeClass('active');
+    $('#a-tab').removeClass('active');
 
   }
 
@@ -26,6 +31,11 @@
     $('#weeks-tab').addClass('active');
     $('#months-tab').removeClass('active');
     $('#all-tab').removeClass('active');
+    $('#s-tab').removeClass('active');
+    $('#t-tab').removeClass('active');
+    $('#w-tab').addClass('active');
+    $('#m-tab').removeClass('active');
+    $('#a-tab').removeClass('active');
   }
 
   function showMonths(){
@@ -40,6 +50,11 @@
     $('#weeks-tab').removeClass('active');
     $('#months-tab').addClass('active');
     $('#all-tab').removeClass('active');
+    $('#s-tab').removeClass('active');
+    $('#t-tab').removeClass('active');
+    $('#w-tab').removeClass('active');
+    $('#m-tab').addClass('active');
+    $('#a-tab').removeClass('active');
   }
 
   function showAll(){
@@ -54,6 +69,11 @@
     $('#weeks-tab').removeClass('active');
     $('#months-tab').removeClass('active');
     $('#all-tab').addClass('active');
+    $('#s-tab').removeClass('active');
+    $('#t-tab').removeClass('active');
+    $('#w-tab').removeClass('active');
+    $('#m-tab').removeClass('active');
+    $('#a-tab').addClass('active');
   }
 
 
